update to java 21 and spring boot 3.5